--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -54,7 +54,7 @@
 
                 @if(isThisMyEvent){
                     <div class="col-xs-12 text-center margin-top">
-                        <a href="@controllers.routes.EventPageController.edit(event.objectId)" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span> @Messages("event.button.edit")</a><br>
+                        <a href="@controllers.routes.EventPageController.edit(event.objectId)" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span> @Messages("event.button.edit")</a><br>
                     </div>
                 }
             </div>
