--- a/app/views/profile/editProfile.scala.html
+++ b/app/views/profile/editProfile.scala.html
@@ -76,7 +76,7 @@
         @b3.form(action = routes.UserProfileController.editSubmit(), 'enctype -> "multipart/form-data") {
             <div class="col-xs-12">
                 <nav>
-                    <ul class="nav nav-tabs nav-justified nav-tabs-profile">
+                    <ul class="nav nav-tabs nav-justified nav-tabs-profile-edit">
                         <li class="active"><a data-toggle="tab" href="#profile-tab-name" title="@Messages("profile.create.tabs.profile-name.food.title")">@Messages("profile.create.tabs.profile-name.food.name")</a></li>
                         <li><a data-toggle="tab" href="#profile-tab-about-me" title="@Messages("profile.create.tabs.about-me.title")">@Messages("profile.create.tabs.about-me.name")</a></li>
                         <li><a data-toggle="tab" href="#profile-tab-food" title="@Messages("profile.create.tabs.food.title")">@Messages("profile.create.tabs.food.name")</a></li>
