--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -1,5 +1,4 @@
 @(userProfile: models.UserProfile,
-        tabMenu: TabMenu,
         recipeBoxes: Option[List[RecipeBox]] = None,
         eventBoxes: Option[List[EventBox]] = None,
         myReviewBoxes: Option[List[ReviewBox]] = None,
@@ -25,9 +24,10 @@
 }
 
 @avatarUrl = @{if(userProfile.getAvatarImage != null){routes.ImageController.userThumb(userProfile.getAvatarImage.getStoreId).url}else{""} }
+@columnLayout = @{ if(eventBoxes.nonEmpty || recipeBoxes.nonEmpty || reviewBoxesAboutMe.nonEmpty || reviewBoxesAboutMyFood.nonEmpty || myReviewBoxes.nonEmpty || myRecipeReviewBoxes.nonEmpty || isThisMyProfile || userProfile.isUserHost) { "col-xs-12 col-sm-6" }else{ "col-xs-12" }}
 
 @main(title = Messages("profile.title", userProfile.profileLinkName), footerScripts = play.twirl.api.Html(pageScripts.toString), metaData = metaData) {
-    <div class="container">
+    <div class="container profile-container">
         @views.html.profile.profileHeader(userProfile.profileLinkName, userProfile.getOwner.firstName, avatarUrl, showLinkBack = false)
 
         <div class="row row-no-padding">
@@ -45,90 +45,112 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 bg-color">
-                @* Events *@
-                @views.html.profile.eventBoxesList(eventBoxes, userProfile, isThisMyProfile)
-
-                @* Recipes *@
-                @views.html.profile.recipeBoxesList(recipeBoxes, userProfile, isThisMyProfile)
-
-                @* Ratings *@
-                @views.html.profile.reviewBoxesList(reviewBoxesAboutMe, reviewBoxesAboutMyFood, myReviewBoxes, reviewBoxesAboutMyFood, userProfile, isThisMyProfile)
-            </div>
-            <div class="col-xs-12 col-sm-6 bg-color">
-
-                <section>
-                    <article>
-                        <h1 class="page-header hidden">@userProfile.profileLinkName</h1>
-                        <h2>@userProfile.aboutMeHeadline</h2>
-                        <p id="result"></p>
-
-                        <div class="breadtext">
-                            @Html(userProfile.aboutMe)
-                        </div>
-                        <hr class="hr-orange hr-like">
-                        @shared.flashmsg(flash)
-
-@*                      Disabled because of Events
-                        @if(!isThisMyProfile && userProfile.isUserHost) {
-                            @requestForm
-                        }
-*@
-                    </article>
-                </section>
-
-                @shared.grade(inputId = "host-grade", initialValue = userProfile.getOwner.getAverageRating, size = "xs", cssClass = "hdc-grade-pull-left pull-left", disabled = true, showCaption = false, showNrOfRatings = true, nrOfRatings = userProfile.getOwner.getNrOfRatings)
-                @if(!isThisMyProfile) {
-                    @userRateForm
-                }
-
-                @*  Share / Like / Fav *@
-                <div class="row">
-                    <div class="col-xs-12">
-                        @views.html.profile.profileFavorite(userProfile)
-                        @userLikeForm
-                        @shared.fbShare(shareUrl)
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-12 col-md-6 bg-color big-margin-top">
-                @views.html.profile.profilePropertiesBox(tagList,userProfile)
-                @views.html.profile.visitorsBox(userProfile, isThisMyProfile)
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="col-xs-12 col-md-12 big-margin-top">
+        <div class="row row-no-padding">
+            <div class="col-xs-12">
                 <nav>
                     <ul class="nav nav-tabs nav-tabs-profile">
-                        <li class="active"><a data-toggle="tab" href="#@tabMenu.tab1" title="@Messages("profile.tabs.food.title")"><span class="glyphicon glyphicon-cutlery"></span>&nbsp;@Messages("profile.tabs.food.name")</a></li>
-                        <li><a data-toggle="tab" href="#@tabMenu.tab2" title="@Messages("profile.tabs.blog.title")"><span class="glyphicon glyphicon-pencil"></span>&nbsp;@Messages("profile.tabs.blog.name")</a></li>
+                        <li class="active"><a data-toggle="tab" href="#home-tab" title="@Messages("profile.tabs.home.title")"><span class="glyphicon glyphicon-home"></span>&nbsp;@Messages("profile.tabs.home.name")</a></li>
+                        <li><a data-toggle="tab" href="#blog-tab" title="@Messages("profile.tabs.blog.title")"><span class="glyphicon glyphicon-pencil"></span>&nbsp;@Messages("profile.tabs.blog.name")</a></li>
+
                         @if(isThisMyProfile) {
-                            <li><a data-toggle="tab" href="#@tabMenu.tab4" title="@Messages("profile.tabs.inbox.title")"><span class="glyphicon glyphicon-envelope"></span>&nbsp;@Messages("profile.tabs.inbox.name")</a></li>
-                            <li><a data-toggle="tab" href="#@tabMenu.tab5" title="@Messages("profile.tabs.favourites.title")"><span class="glyphicon glyphicon-paperclip"></span>&nbsp;@Messages("profile.tabs.favourites.name")</a></li>
+                            <li><a data-toggle="tab" href="#inbox-tab" title="@Messages("profile.tabs.inbox.title")"><span class="glyphicon glyphicon-envelope"></span>&nbsp;@Messages("profile.tabs.inbox.name")</a></li>
+                            <li><a data-toggle="tab" href="#fav-tab" title="@Messages("profile.tabs.favourites.title")"><span class="glyphicon glyphicon-paperclip"></span>&nbsp;@Messages("profile.tabs.favourites.name")</a></li>
+                            <li><a data-toggle="tab" href="#stats-tab" title="@Messages("profile.tabs.stats.title")"><span class="glyphicon glyphicon-eye-open"></span>&nbsp;@Messages("profile.tabs.stats.name")</a></li>
+                            <li><a href="@routes.UserProfileController.edit().url" title="@Messages("profile.tabs.edit-profile.title")"><span class="glyphicon glyphicon-wrench"></span>&nbsp;@Messages("profile.tabs.edit-profile.name")</a></li>
                         }
                     </ul>
                 </nav>
 
-                <div class="tab-content">
-                    <div class="tab-pane tab-hdc fade in active" id="@tabMenu.tab1"></div>
-                    <div class="tab-pane tab-hdc fade" id="@tabMenu.tab2">@views.html.profile.blogPostList(userProfile, isThisMyProfile)</div>
-                    <div class="tab-pane tab-hdc fade" id="@tabMenu.tab4">@views.html.profile.mailInbox(userMessages, currentUser, isThisMyProfile)</div>
-                    @if(isThisMyProfile) {
-                    <div class="tab-pane tab-hdc fade" id="@tabMenu.tab5">
-                        @favorites
-                    </div>
-                    }
-                </div>
-
             </div>
         </div>
 
+        <div class="row row-with-padding bg-color">
+            <div class="col-xs-12">
+                <div class="tab-content">
+
+                    <!-- Home Tab -->
+                    <div class="tab-pane tab-hdc fade in active" id="home-tab">
+
+                        <div class="row">
+
+                            <div class="@columnLayout">
+                                @* Events *@
+                                @views.html.profile.eventBoxesList(eventBoxes, userProfile, isThisMyProfile)
+
+                                @* Old Request form *@
+                                @if(!isThisMyProfile && userProfile.isUserHost && eventBoxes.isEmpty) {
+                                    @requestForm
+                                }
+
+                                @* Recipes *@
+                                @views.html.profile.recipeBoxesList(recipeBoxes, userProfile, isThisMyProfile)
+
+                                @* Ratings *@
+                                @views.html.profile.reviewBoxesList(reviewBoxesAboutMe, reviewBoxesAboutMyFood, myReviewBoxes, reviewBoxesAboutMyFood, userProfile, isThisMyProfile)
+                            </div>
+                            <div class="@columnLayout">
+
+                                <section>
+                                    <article>
+                                        <h1 class="hidden">@userProfile.profileLinkName</h1>
+                                        <h2>@if(userProfile.aboutMeHeadline.isEmpty){ @userProfile.profileLinkName } else { @userProfile.aboutMeHeadline }</h2>
+
+                                        @shared.grade(inputId = "host-grade", initialValue = userProfile.getOwner.getAverageRating, size = "xs", cssClass = "hdc-grade-pull-left pull-left", disabled = true, showCaption = false, showNrOfRatings = true, nrOfRatings = userProfile.getOwner.getNrOfRatings)
+                                        @if(!isThisMyProfile) {
+                                            @userRateForm
+                                        }
+
+                                        <p id="result"></p>
+
+                                        <div class="breadtext">
+                                            @Html(userProfile.aboutMe)
+                                        </div>
+                                        <hr class="hr-orange hr-like">
+                                        @shared.flashmsg(flash)
+
+                                    </article>
+                                </section>
+
+
+                                @*  Share / Like / Fav *@
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        @views.html.profile.profileFavorite(userProfile)
+                                        @userLikeForm
+                                        @shared.fbShare(shareUrl)
+                                    </div>
+                                </div>
+
+                                @views.html.profile.profilePropertiesBox(tagList,userProfile)
+
+                            </div>
+                        </div>
+
+                    </div>
+
+
+
+                    <!-- Blog Tab -->
+                    <div class="tab-pane tab-hdc fade" id="blog-tab">@views.html.profile.blogPostList(userProfile, isThisMyProfile)</div>
+
+
+                    <!-- Inbox Tab -->
+                    <div class="tab-pane tab-hdc fade" id="inbox-tab">@views.html.profile.mailInbox(userMessages, currentUser, isThisMyProfile)</div>
+
+
+                    <!-- Favorites Tab -->
+                    @if(isThisMyProfile) {
+                        <div class="tab-pane tab-hdc fade" id="fav-tab">
+                        @favorites
+                        </div>
+                    }
+
+                    <!-- Stats Tab -->
+                    <div class="tab-pane tab-hdc fade" id="stats-tab"> @views.html.profile.visitorsBox(userProfile, isThisMyProfile)</div>
+
+                </div>
+            </div>
+        </div>
 
     </div>
 }
