--- a/app/views/profile/eventBoxesList.scala.html
+++ b/app/views/profile/eventBoxesList.scala.html
@@ -1,14 +1,19 @@
 @(eventBoxes: Option[List[EventBox]], userProfile: UserProfile, isThisMyProfile: Boolean)(implicit messages: Messages)
 
-<h2 class="lead"><span class="glyphicon glyphicon-calendar"></span>&nbsp;@Messages("profile.tabs.event.name")</h2>
-@if(eventBoxes.nonEmpty) {
-  @views.html.event.eventBox(userProfile.profileLinkName)
+@if(userProfile.isUserHost) {
+    <h2 class="sub-with-border"><span class="glyphicon glyphicon-calendar text-green pull-right"></span>&nbsp;@Messages("profile.tabs.event.name")</h2>
 }
+
+@if(eventBoxes.nonEmpty) {
+    @views.html.event.eventBox(userProfile.profileLinkName)
+}
+
 @if(isThisMyProfile) {
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 @if(eventBoxes.isEmpty) { dashed-focused }">
+            @if(eventBoxes.isEmpty) {<strong>@Messages("profile.event.no-events")</strong> }
             <div class="btn-group btn-edit-group">
-                <a href="@controllers.routes.EventPageController.add" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> @Messages("profile.button.event.add")</a>
+                <a href="@controllers.routes.EventPageController.add" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> @Messages("profile.button.event.add")</a>
             </div>
         </div>
     </div>
