--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -933,6 +933,7 @@ input[type="reset"]:hover
   border-radius: 5px;
   overflow: visible;
   background-color: @hdc-light-gray;
+  margin-bottom:20px;
 }
 .col-event-boxes .full-width-image-wrapper {
   min-height:200px;
