--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -22,14 +22,14 @@
 
     <div class="container">
         @defining(if(event.getOwnerProfile.getAvatarImage != null){routes.ImageController.userThumb(event.getOwnerProfile.getAvatarImage.getStoreId).url}else{""}) { avatarUrl: String =>
-            @views.html.profile.profileHeader(event.getOwnerProfile.profileLinkName, event.getOwnerProfile.getOwner.firstName, avatarUrl, true)
+            @views.html.profile.profileHeader(event.getOwnerProfile.profileLinkName, event.getOwnerProfile.getOwner.firstName, avatarUrl, showLinkBack = true)
         }
         <div class="row row-no-padding">
             <div class="col-xs-12">
                 <div class="full-width-image-wrapper">
                 @event.getMainImage match {
                     case null => {
-                        @shared.img("images/campaign/campaign_header.jpg", cssClass = "img-responsive full-width-image")
+                        @shared.img("images/event/event-default-main-image.jpg", cssClass = "img-responsive full-width-image")
                     }
                     case image: models.files.ContentFile => {
                         @shared.img(routes.ImageController.eventNormal(image.getStoreId).url, cssClass = "img-responsive full-width-image")
