Added Browsing of Events Fixed startpage filtering

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2264,10 +2264,30 @@ h3.aside-title {
 }
 .panel-startpage h2
 {
-  margin:0px;
+  margin:0;
   font-size:1.2em;
   font-weight:bold;
   color:@hdc-dark-gray;
+}
+.panel-startpage .price-wrapper,
+{
+  text-align: right;
+}
+.panel-startpage .price-info
+{
+  font-size:0.88em;
+  color: @hdc-dark-gray;
+  line-height:1.2em;
+  display: block;
+  clear: both;
+}
+.panel-startpage .price
+{
+  margin:0;
+  font-size:1.4em;
+  font-weight:bold;
+  vertical-align: middle;
+  color:@hdc-red;
 }
 .panel-startpage hr
 {
@@ -2475,6 +2495,9 @@ h3.aside-title {
   margin-bottom:0px;
 }
 .form-filter .btn-filter {
+  margin-top:24px;
+}
+.form-filter .btn-filter-event {
   margin-top:24px;
 }
 .form-filter dl
