--- a/app/views/browse/browseEventBox.scala.html
+++ b/app/views/browse/browseEventBox.scala.html
@@ -1,22 +1,24 @@
-@(boxes: List[models.viewmodels.BrowseBox] = Nil)(implicit messages: Messages)
-@if(!boxes.isEmpty) {
+@(boxes: List[models.viewmodels.BrowseEventBox] = Nil)(implicit messages: Messages)
+@if(boxes.nonEmpty) {
     <div class="row">
-    @for(box: models.viewmodels.BrowseBox <- boxes){
+    @for(box: models.viewmodels.BrowseEventBox <- boxes){
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-            <a href="@box.linkToProfile">
+            <a href="@box.linkToEvent">
                 @defining( if(box.mainImage.isDefined){ "style=\"background-image: url('" + box.mainImage.get + "');background-size:100%;\"" } else { "" } ) { mainImage: String =>
                 <div class="thumbnail panel-startpage hover-green-dropshadow" @play.twirl.api.Html(mainImage)>
-                    @if(box.isHost){<div class="host-level-icon" data-toggle="tooltip" data-placement="right" title="@Messages("level.host.description", box.fullName)"><span class="icon"></span></div>}
                     <div class="body">
                         @shared.hostImageCircle(box.userImage.getOrElse(""),cssClassWrapper = "white-border drop-shadow")
-                        <h2>@box.fullName</h2>
+                        <h2>@box.eventName</h2>
                         <hr>
                         @if(box.location.nonEmpty) {
                             <p class="location">@play.twirl.api.Html(Messages("browse.boxes.location", box.location.get))</p>
                         }else {
                             <p><br></p>
                         }
-                        @shared.grade(inputId = "host-grade", initialValue = box.userRating, disabled = true, size = "xxs")
+                        <div class="price-wrapper">
+                            <span class="price">@box.price@Messages("event.price.currency.end")</span>
+                            <span class="price-info">@Messages("event.price.front.description")</span>
+                        </div>
                     </div>
                 </div>
                 }
