--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -97,11 +97,9 @@
                     <div class="col-xs-12 form-filter animated fadeIn">
                     @helper.form(action=routes.StartPageController.index(), 'class -> "form-horizontal"){
                         <div class="form-group">
-                            @* @helper.inputText(searchForm("freeText"), '_label -> Messages("filterform.freetext")) *@
                             @if(optionsFoodAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fTag"), optionsFoodAreas.get, '_label -> Messages("filterform.foodarea"), 'class -> "form-control") </div>}
                             @if(optionsLocationAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fCounty"), optionsLocationAreas.get, '_label -> Messages("filterform.area"), 'class -> "form-control") </div> }
-                            @if(optionsIsHost.nonEmpty){ <div class="col-xs-12 col-sm-2"> @helper.checkbox(searchForm("fHost"), '_label -> Messages("filterform.is-host"), '_help -> "", '_showErrors -> false, 'class -> "") </div> }
-                            <div class="col-xs-12 no-margin-top"><button class="btn btn-primary no-margin-top" type="submit">@Messages("filterform.submit")</button></div>
+                            <div class="col-xs-12 col-sm-2 no-margin-top"><button class="btn btn-primary btn-filter-event" type="submit">@Messages("filterform.submit")</button></div>
                         </div>
                         }
                     </div>
@@ -114,9 +112,23 @@
                     }else{
                         <div class="col-xs-12 text-center">@play.twirl.api.Html(Messages("startpage.boxes.not-found", routes.StartPageController.index().url))</div>
                     }
-                    <div class="col-xs-12 text-center"><a class="btn btn-primary btn-lg btn-big-padding btn-cta" role="button" href="@routes.BrowsePageController.index()">@Messages("startpage.main.browse.link.text")</a></div>
+                    <div class="col-xs-12 text-center"><a class="btn btn-primary btn-lg btn-big-padding btn-cta" role="button" href="@routes.BrowsePageController.browseEvents()">@Messages("startpage.main.browse-event.link.text")</a></div>
                 </div>
 
+                <!-- Filtering push -->
+                <div class="row">
+                    <div class="col-xs-12 big-margin-top form-filter animated fadeIn">
+                    @helper.form(action=routes.StartPageController.index(), 'class -> "form-horizontal"){
+                        <div class="form-group">
+                            @* @helper.inputText(searchForm("freeText"), '_label -> Messages("filterform.freetext")) *@
+                            @if(optionsFoodAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fTag"), optionsFoodAreas.get, '_label -> Messages("filterform.foodarea"), 'class -> "form-control") </div>}
+                            @if(optionsLocationAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fCounty"), optionsLocationAreas.get, '_label -> Messages("filterform.area"), 'class -> "form-control") </div> }
+                            @if(optionsIsHost.nonEmpty){ <div class="col-xs-12 col-sm-2"> @helper.checkbox(searchForm("fHost"), '_label -> Messages("filterform.is-host"), '_help -> "", '_showErrors -> false, 'class -> "") </div> }
+                            <div class="col-xs-12 no-margin-top"><button class="btn btn-primary no-margin-top" type="submit">@Messages("filterform.submit")</button></div>
+                        </div>
+                    }
+                    </div>
+                </div>
                 <!-- Profile boxes -->
                 <div class="row">
                     @if(profileBoxes.isDefined){
@@ -124,7 +136,7 @@
                     }else{
                         <div class="col-xs-12 text-center">@play.twirl.api.Html(Messages("startpage.boxes.not-found", routes.StartPageController.index().url))</div>
                     }
-                    <div class="col-xs-12 text-center"><a class="btn btn-primary btn-lg btn-big-padding btn-cta" role="button" href="@routes.BrowsePageController.index()">@Messages("startpage.main.browse.link.text")</a></div>
+                    <div class="col-xs-12 text-center"><a class="btn btn-primary btn-lg btn-big-padding btn-cta" role="button" href="@routes.BrowsePageController.browseProfiles()">@Messages("startpage.main.browse.link.text")</a></div>
                 </div>
 
                 @if(currentUser.isEmpty) {
